fix for layout issue
- UI/UX tweaks to DuckDuckGo Search box on the TechHQ side

- card__header alignmint/UI improvement

--- a/css/styling.css
+++ b/css/styling.css
@@ -219,6 +219,8 @@ body {
   background-color: var(--themeColor1);
   display: grid;
   grid-template-areas: "header" "main-section" "footer";
+  grid-template-rows: 1fr auto 1fr;
+  grid-template-columns: 1fr;
   min-height: 100%;
 }
 
@@ -244,7 +246,7 @@ body {
 .card .card__header--wide,
 .card--bordered .card__header,
 .card--bordered .card__header--wide {
-  align-items: center;
+  align-items: baseline;
   border-color: var(--themeColor5);
   background-color: var(--themeColor5);
   color: var(--themeColor1);
@@ -1929,14 +1931,19 @@ code {
   height: 40px;
 }
 
+.searchbarContainer #ddgSearch input {
+  padding: 0 0.75rem;
+}
+
 .searchbarContainer button {
-  background: var(--forrestGreen);
-  border: 1px solid var(--forrestGreen);
+  background: var(--forrest_green);
+  border: 0;
+  border-radius: 0.25rem;
   box-shadow: 0 2px 8px 0 hsla(120, 33%, 12%, 0.2);
   color: var(--white);
-  border-radius: 0.25rem;
-  padding: 0.4em 0.875em;
   font-size: var(--fs-normal);
+  outline: 1px solid var(--forrest_green);
+  padding: 0.4em 0.875em;
 }
 
 /* All of the following is from GAOTD's site, .. with some updates for compliance checkers I ran   */
