--- a/scss/03-layout/_base.scss
+++ b/scss/03-layout/_base.scss
@@ -37,7 +37,7 @@ body {
   }
 
   .card__header {
-    align-items: center;
+    align-items: baseline;
     border-color: var(--themeColor5);
     background-color: var(--themeColor5);
     color: var(--themeColor1);
